<resources>

    <string name="app_name">如意买管家</string>
    <string name="exit">再按一次退出程序</string>
    <string name="force_upgrade">此版本已不可用，下载新的版本</string>
    

    <!-- Login -->
    <string name="login_emptyname_or_emptypwd">用户名或密码为空，请重新输入</string>
    <string name="mobile_no">手机:</string>
    <string name="login">登录</string>
    <string name="reg">注册</string>
    <string name="login_successful">登录成功</string>
    <string name="login_fail">登录失败</string>
    <string name="shortcut_buy">快速购买</string>
    <string name="get_data_fail">数据获取失败，请稍后再试</string>

    <!-- 用户注册时，如果表单填写不完整的提示语 -->
    <string name="reg_error_empty_form_message">信息没有填写完整哦!</string>
    <!-- 两次填写的密码不一致 -->
    <string name="reg_error_psw_not_same">两次密码填写不一致</string>
    <!-- z注册成功提示语 -->
    <string name="reg_success">注册成功，五秒后将返回登录界面</string>
    <!-- z注册失败提示语 -->
    <string name="reg_fail">注册失败，请稍后再试</string>
    <!-- 聊天时消息不能为空 -->
    <string name="messagee_eror_null">消息不能为空</string>
    <string name="action_no_register_return_login">已有账号？返回登陆</string>
    <string name="prompt_password_repet">确认密码</string>

    <!-- 与服务器失去连接的时候，提示语 -->
    <string name="lose_connect_with_server">暂时没有连接到服务器上哦，是不是您的网络不给力？</string>

    <!-- 退出程序时的提示信息 -->
    <string name="exit_program_tip">再按一次返回键退出程序</string>

    <!-- 修改密码界面 -->
    <string name="change_psw_new_psw">新密码</string>
    <string name="change_psw_new_psw_repet">重复密码</string>
    <string name="change_psw_title">修改密码</string>
    <string name="change_psw_error_empty_tip">新密码和重复密码不能为空</string>
    <string name="change_psw_error_not_the_same_tip">新密码和重复密码不一致</string>
    <string name="change_psw_fail">密码修改失败</string>
    <string name="change_psw_success">密码修改成功</string>
    <string name="btn_sure_change_psw">确认修改</string>
    <string name="btn_no_change_psw">放弃修改</string>

    <!-- 查找用户 -->
    <string name="setting_about_description">用心服务，快速送达</string>
    <string name="all_rights_reserved">Copyright © 2011-2014 O2O. All Rights Reserved.</string>
    <string name="result_suc">找到了!</string>
    <string name="result_time_tag">预计送达时间：</string>
    <string name="result_sellers_phone_tag">卖家电话：</string>
    <string name="result_sellers_name_tag">卖家姓名：</string>
    <string name="result_message_tag">交易信息：</string>
    <string name="result_sellers_bill_count_tag">成交单数：</string>
    <string name="result_sellers_speed_tag">送货速度：</string>
    <string name="result_sellers_quality_tag">产品质量：</string>
    <string name="result_sellers_service_tag">服务态度：</string>
    <string name="search_thing">请输入您想要的物品名称</string>
    <string name="i_want">我想要</string>

    <!-- order -->
    <string name="submit">提交</string>
    <string name="cancel">取消</string>
    <string name="order_write">订单填写</string>
    <string name="order_num_digits">0123456789</string>
    <string name="price_refer">市场参考价 </string>
    <string name="order_write_please"> 请完善订单信息！ </string>
    <string name="unfinished_order">未完成订单</string>
    <string name="history_order">历史订单</string>
    <string name="my_order">我的订单</string>
    <string name="order_result">订单结果</string>
    <string name="order_detail">订单详情</string>
    <string name="search_hint"> 请输入商品名称</string>
    <string name="search"> 搜索 </string>
    <string name="search_history"> 搜索历史</string>
    <string name="address">地      址  ：</string>
    <string name="number">数      量  ：</string>
    <string name="price_one">单      价  ：</string>
    <string name="product">产      品  ：</string>
    <string name="mobile_no_tag">手          机  :</string>
    <string name="setting_suc">设置成功！</string>
    <string name="setting_fail">设置失败！</string>
    <string name="get_suc">设置成功！</string>
    <string name="get_fail">获取失败！</string>
    <string name="loc_wait">正在获取中...</string>
    <string name="num_hint">请输入购买数量</string>
    <string name="phone_hint">请输入手机号</string>
    <string name="nearby">附近</string>
    <string name="order_wait">订单下单中...</string>
    <string name="remainder_time">剩余时间：</string>
    <string name="no_find">没有找到服务商家，请修改关键字重新下单！</string>
    <string name="no_goods_brief">暂无商品介绍</string>
    <string name="order_all">全部</string>
    <string name="order_create">已下单</string>
    <string name="order_wait_receiving">待收货</string>
    <string name="order_agreed">已成交</string>
    <string name="order_not_agreed">未成交</string>
    <string name="no_order">无订单数据</string>
    <string name="now_select">您要的商品：</string>
    <string name="find_goods">为您找到以下商品</string>
    <!-- notify -->
    <string name="notify">消息</string>
    <string name="order_suc">订单成功</string>
    <string name="no_data">没有找到符合条件的房源</string>

</resources>