<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/common_bg_gray"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/chat_title_bg_repeat" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/reg"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/common_bg_gray" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <RelativeLayout
                android:id="@+id/regInputView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:id="@+id/input"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dip"
                    android:layout_marginRight="15.0dip"
                    android:layout_marginTop="10.0dip"
                    android:background="@drawable/as_input_frame"
                    android:orientation="vertical" >

                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" >

                        <EditText
                            android:id="@+id/new_username"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:hint="请输入用户名"
                            android:imeActionLabel="下一步"
                            android:maxLength="50"
                            android:paddingBottom="6.0dip"
                            android:paddingLeft="50.0dip"
                            android:paddingRight="50dip"
                            android:paddingTop="6.0dip"
                            android:singleLine="true"
                            android:textColor="#ff333333"
                            android:textSize="17.829987dip" />
                        <!-- android:imeOptions="actionNext|flagNoExtractUi" -->

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignBaseline="@id/new_username"
                            android:layout_centerVertical="true"
                            android:paddingLeft="10.0dip"
                            android:paddingRight="10dip"
                            android:text="账号"
                            android:textColor="#ff333333"
                            android:textSize="16.5dip" />
                    </RelativeLayout>

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1.0px"
                        android:background="#ffcfd4da" />

                    <RelativeLayout
                        android:id="@+id/relativeLayout1"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" >

                        <EditText
                            android:id="@+id/new_password"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:hint="请输入密码"
                            android:imeActionLabel="下一步"
                            android:imeOptions="actionDone|flagNoExtractUi"
                            android:inputType="textPassword"
                            android:maxLength="16"
                            android:maxLines="1"
                            android:paddingBottom="6.0dip"
                            android:paddingLeft="50.0dip"
                            android:paddingRight="50dip"
                            android:paddingTop="6.0dip"
                            android:textColor="#ff333333"
                            android:textSize="17.829987dip" />

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignBaseline="@id/new_password"
                            android:paddingLeft="10.0dip"
                            android:paddingRight="10dip"
                            android:text="密码"
                            android:textColor="#ff333333"
                            android:textSize="16.5dip" />
                    </RelativeLayout>

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1.0px"
                        android:background="#ffcfd4da" />

                    <RelativeLayout
                        android:id="@+id/relativeLayout2"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" >

                        <EditText
                            android:id="@+id/new_password_repet"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:hint="@string/prompt_password_repet"
                            android:imeActionLabel="登录"
                            android:imeOptions="actionDone|flagNoExtractUi"
                            android:inputType="textPassword"
                            android:maxLength="16"
                            android:maxLines="1"
                            android:paddingBottom="6.0dip"
                            android:paddingLeft="50.0dip"
                            android:paddingRight="50dip"
                            android:paddingTop="6.0dip"
                            android:textColor="#ff333333"
                            android:textSize="17.829987dip" />

                        <TextView
                            android:id="@+id/new_password_repet_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignBaseline="@id/new_password_repet"
                            android:paddingLeft="10.0dip"
                            android:paddingRight="10dip"
                            android:text="密码"
                            android:textColor="#ff333333"
                            android:textSize="16.5dip" />
                    </RelativeLayout>

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1.0px"
                        android:background="#ffcfd4da" />

                    <RelativeLayout
                        android:id="@+id/relativeLayout3"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" >

                        <EditText
                            android:id="@+id/mailbox_et"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:hint="请输入邮箱地址"
                            android:imeActionLabel="登录"
                            android:imeOptions="actionDone|flagNoExtractUi"
                            android:inputType="textEmailAddress"
                            android:maxLength="16"
                            android:maxLines="1"
                            android:paddingBottom="6.0dip"
                            android:paddingLeft="50.0dip"
                            android:paddingRight="50dip"
                            android:paddingTop="6.0dip"
                            android:textColor="#ff333333"
                            android:textSize="17.829987dip" />

                        <TextView
                            android:id="@+id/mailbox_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignBaseline="@id/mailbox_et"
                            android:layout_centerVertical="true"
                            android:paddingLeft="10.0dip"
                            android:paddingRight="10dip"
                            android:text="邮箱"
                            android:textColor="#ff333333"
                            android:textSize="16.5dip" />
                    </RelativeLayout>

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1.0px"
                        android:background="#ffcfd4da" />

                    <RelativeLayout
                        android:id="@+id/relativeLayout4"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" >

                        <EditText
                            android:id="@+id/phone_et"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:hint="请输入手机号码"
                            android:imeActionLabel="登录"
                            android:imeOptions="actionDone|flagNoExtractUi"
                            android:inputType="textPhonetic"
                            android:maxLength="16"
                            android:maxLines="1"
                            android:paddingBottom="6.0dip"
                            android:paddingLeft="50.0dip"
                            android:paddingRight="50dip"
                            android:paddingTop="6.0dip"
                            android:textColor="#ff333333"
                            android:textSize="17.829987dip" />

                        <TextView
                            android:id="@+id/phone_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignBaseline="@id/phone_et"
                            android:layout_centerVertical="true"
                            android:paddingLeft="10.0dip"
                            android:paddingRight="10dip"
                            android:text="手机"
                            android:textColor="#ff333333"
                            android:textSize="16.5dip" />
                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/register_ll"
                    android:layout_width="fill_parent"
                    android:layout_height="40dip"
                    android:layout_alignLeft="@id/input"
                    android:layout_alignRight="@id/input"
                    android:layout_below="@id/input"
                    android:layout_marginTop="10dip"
                    android:padding="1.0dip" >

                    <Button
                        android:id="@+id/btn_regform_regnewuser"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:background="@drawable/common_button_bg"
                        android:gravity="center"
                        android:text="注册"
                        android:textColor="@color/white"
                        android:textSize="17.0sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/back_ll"
                    android:layout_width="wrap_content"
                    android:layout_height="40dip"
                    android:layout_alignRight="@id/input"
                    android:layout_below="@id/register_ll"
                    android:layout_marginTop="10dip"
                    android:padding="1.0dip" >

                    <Button
                        android:id="@+id/btn_noreg_return_login"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:background="@drawable/common_button_bg"
                        android:gravity="center"
                        android:text="@string/action_no_register_return_login"
                        android:textColor="@color/white"
                        android:textSize="17.0sp" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>